--- a/examples/gke-a4/gke-a4.yaml
+++ b/examples/gke-a4/gke-a4.yaml
@@ -294,8 +294,8 @@ deployment_groups:
       mount_options: >-
         implicit-dirs,                              # Create implicit directories locally when accessed.
         metadata-cache:ttl-secs:-1,                 # Keep cached metadata (file attributes, types) indefinitely time-wise.
-        metadata-cache:stat-cache-max-size-mb:-1    # Allow unlimited size for the file attribute (stat) cache.
-        metadata-cache:type-cache-max-size-mb:-1    # Allow unlimited size for the file/directory type cache.
+        metadata-cache:stat-cache-max-size-mb:-1,    # Allow unlimited size for the file attribute (stat) cache.
+        metadata-cache:type-cache-max-size-mb:-1,    # Allow unlimited size for the file/directory type cache.
         file-cache:max-size-mb:-1,                  # Allow unlimited size for the file content cache.
         file-cache:cache-file-for-range-read:true,  # Cache the entire file when any part is read sequentially.
         file-cache:enable-parallel-downloads:true,  # Use multiple streams to download file content faster.
